cmake_minimum_required(VERSION 3.29)
project(untitled1 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled1 ex1.c
        ex3.c
        ex4.c
        ex5.c
        ex6.c
        ex7.c
        ex8.c
        ex9.c
        ex10.c
        Ex11.c
        Ex12.c
        ex13.c
        ex14.c
        ex15.c
        ex16.c
        ex17.c
        ex19.c
        ex20.c
        ex21.c
        ex18.c
)
add_executable(EX2 ex2.c)
add_executable(EX3 ex3.c)
add_executable(EX4 ex4.c)
add_executable(EX5 ex5.c)
add_executable(EX6 ex6.c)
add_executable(EX7 ex7.c)
add_executable(EX8 ex8.c)
add_executable(EX9 ex9.c)
add_executable(EX10 ex10.c)
add_executable(EX11 ex11.c)
add_executable(EX12 ex12.c)
add_executable(EX13 ex13.c)
add_executable(EX14 ex14.c)
add_executable(EX15 ex15.c)
add_executable(EX16 ex16.c)
add_executable(EX17 ex17.c)
add_executable(EX18 ex18.c)
add_executable(EX19 ex19.c)
add_executable(EX20 ex20.c)
add_executable(EX21 ex21.c)
